Ready to deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,17 +14,12 @@
 #
 default: &default
   adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  username: postgres
-  password: stitch
-  host: localhost
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: realtime_search_analytics_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -58,7 +53,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: realtime_search_analytics_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
