--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,7 @@ default: &default
   url: <%= ENV['DATABASE_URL'] %>
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  socket: /tmp/.s.PGSQL.5432
 
 development:
   <<: *default
